k8s/service1/example-service1.yaml
kind: Service
apiVersion: v1
metadata:
  name: example1
spec:
  type: ClusterIP
  selector:
    app: example1
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
